[package]
name = "x1337x-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
minreq = { version="2.6", features = ["https"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.14"
chrono = "0.4"
